Search page actually groups classes by apartment now

--- a/tcf_website/static/search/search.css
+++ b/tcf_website/static/search/search.css
@@ -6,3 +6,8 @@
     background-color:rgb(165, 165, 165);
     height: 1px;
   }
+
+.searched-department-courses {
+    /*text-indent: 50px;*/
+    padding-left: 50px;
+}
