--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -46,19 +46,40 @@ d-flex flex-column justify-content-between" id="sidebar-wrapper">
       </a>
     {% endif %}
   </div>
-  
+
   <div class="footer text-center">
     <a href="{% url 'privacy' %}">Privacy</a> |
     <a href="{% url 'terms' %}">Terms</a>
     <h6>theCourseForum &copy; {{ LATEST_SEMESTER.year }}</h6>
     <p>
         <span>
-            <a href="https://twitter.com/messages/compose?recipient_id=1959594170" target="_blank">Found a bug?</a>
+            <a href="#bugModal" data-toggle="modal" data-target="#bugModal"> Found a bug?</a>
         </span>
         {% if DEBUG %}
         <span> | DEBUG Mode</span>
         {% endif %}
     </p>
+  </div>
+</div>
+
+<!-- found a bug form pop up (modal) -->
+<div class="modal fade" id="bugModal" tabindex="-1" role="dialog" aria-labelledby="bugModal" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="bugModal">Report a Bug </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
   </div>
 </div>
 <!-- /#sidebar-wrapper -->
