--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -24,6 +24,30 @@
                 </p>
             </div>
         </div>
+        <div class="card col-12 col-sm-9 col-md-9 col-lg-6 mt-3">
+            <div class="card-body">
+                <h4 class="card-title"><i class="far fa-edit"></i> My Details</h4>
+                <form method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col">
+                            {{ form.first_name.label_tag }}
+                            {{ form.first_name }}
+                            <small id="first_name" class="form-text text-muted">Your name is never public.</small>
+                        </div>
+                        <div class="col">
+                            {{ form.last_name.label_tag }}
+                            {{ form.last_name }}
+                        </div>
+                        <div class="col">
+                            {{ form.graduation_year.label_tag }}
+                            {{ form.graduation_year }}
+                        </div>
+                    </div>
+                    <input type="submit" class="btn btn-primary mt-3" value="Save Profile">
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
