--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -62,46 +62,6 @@ d-flex flex-column justify-content-between" id="sidebar-wrapper">
   </div>
 </div>
 
-<!-- found a bug form pop up (modal) -->
-<div class="modal fade" id="bugModal" tabindex="-1" role="dialog" aria-labelledby="bugModal" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title center" id="bugModal">Report a Bug </h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form class="needs-validation" novalidate>
-          <div class="form-row">
-              <label for="urlField">URL</label>
-              <input type="text" class="form-control" id="urlField" placeholder="thecourseforum.com" value="thecourseforum.com" required>
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-          </div>
-          <div class="form-row">
-              <label for="emailField">Email (leave blank to remain anonymous)</label>
-              <input type="text" class="form-control" id="emailField" placeholder="example@virginia.edu">
-          </div>
-          <div class="form-row">
-              <label for="descriptionField">Description</label>
-              <textarea class="form-control" id="descriptionField" rows="3" placeholder="Please be as detailed as possible!" required></textarea>
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-          </div>
-          <div class="form-row justify-content-center">
-            <button type="submit" class="btn btn-primary align-self-center">Submit</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- /#sidebar-wrapper -->
+{% include "base/bugform.html" %}
 
-{% block js %}
-<script src="{% static 'base/bugform.js' %}"></script>
-{% endblock %}
+<!-- /#sidebar-wrapper -->
