--- a/tcf_website/templates/base/bugform.html
+++ b/tcf_website/templates/base/bugform.html
@@ -11,7 +11,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form class="needs-validation" novalidate>
+        <form class="needs-validation" id="bugform" novalidate>
           <div class="form-row">
               <label for="urlField">URL</label>
               <input type="text" class="form-control" id="urlField" placeholder="thecourseforum.com" value="thecourseforum.com" required>
@@ -21,7 +21,7 @@
           </div>
           <div class="form-row">
               <label for="emailField">Email (leave blank to remain anonymous)</label>
-              <input type="text" class="form-control" id="emailField" placeholder="example@virginia.edu">
+              <input type="text" class="form-control" id="emailField" placeholder="example@virginia.edu" value="">
           </div>
           <div class="form-row">
               <label for="descriptionField">Description</label>
@@ -31,7 +31,7 @@
               </div>
           </div>
           <div class="form-row justify-content-center">
-            <button type="submit" class="btn btn-primary align-self-center">Submit</button>
+            <button type="button" onclick="submitForm()" class="btn btn-primary align-self-center">Submit</button>
           </div>
         </form>
       </div>
