Fixed landing page masthead and icons grid to look like mockup

--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -72,3 +72,10 @@ footer {
 footer > .row {
     background-color: #172248;
 }
+
+
+/* Utility classes */
+.link-unstyled, .link-unstyled:link, .link-unstyled:hover {
+  color: inherit;
+  text-decoration: inherit;
+}
